fix: still some button problems on mobile

--- a/english-for-kids/style.css
+++ b/english-for-kids/style.css
@@ -548,7 +548,7 @@ input[type='range']:focus {
   
   .start-button.shown {
     transform: translate(-50%, 0%);
-    top: 16%;
+    top: 19%;
   }
   .start-button {
     transform: translate(-50%, -300%);
